# another_ray_cast_project

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.zig  flake.nix
src/: c.zig  cast.c  cast.h  cast.zig  geometry.zig  main.c  main.zig  map.c  map.h  map.zig  player.c  player.h  player.zig  preview.c  preview.h  preview.zig  sdl.zig  timing.c  timing.h  timing.zig  vec.c  vec.h  vec.zig  view.c  view.h  view.zig
